# crafting-process

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  abiotic.txt  app.py  augment.py  batch_recipes.txt  check_batch.py  check_samples.py  check_samples_v2.py  crafting_dsl.vim  graph.py  krastorio-recipes.txt  library.py  main.py  ops.py  overview.txt  plan.py  process.py  pyproject.toml  roadmap.md  sample_recipes.txt  scratch.py  spaceage-recipes.txt  summary.md
crafting_process/: __init__.py  app.py  augment.py  graph.py  library.py  ops.py  orchestration.py  process.py  scratch.py  scratch2.py  scratch3.py  solver.py  utils.py
crafting_process/tests/: test_augment.py  test_graph.py  test_library.py  test_orchestration.py  test_process.py  test_solver.py  test_utils.py
src/: app.py  graph.py
