[project]
name = "crafting-process"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "coolname>=2.2.0",
    "cytoolz>=1.0.0",
    "fastapi>=0.115.5",
    "formal-vector",
    "numpy>=2.1.3",
    "pyyaml>=6.0.2",
    "scipy>=1.14.1",
    "uvicorn>=0.32.0",
]

[tool.uv.sources]
formal-vector = { path = "../formal-vector", editable = true }
