[project]
name = "crafting-process"
version = "0.5.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "coolname>=2.2.0",
    "cytoolz>=1.0.0",
    "fastapi>=0.115.5",
    "formal-vector",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "scipy>=1.14.1",
    "numpy>=1.26.0",
    "crafting-process",
]

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.2",
    "black>=26.3.1",
]

[tool.uv.sources]
formal-vector = { git = "https://github.com/medthehatta/formal-vector" }
crafting-process = { workspace = true }
